# automagic

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: testautomation.rs
src/: automagic.rs  automation.rs  config.rs  hass.rs  hass_client.rs  lib.rs  time.rs
src/model/: request.rs  response.rs
