[package]
name = "automagic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7.9"
toml = "0.8.0"
tracing = "0.1.37"
trait-variant = "0.1.1"
url = "2.4.1"

[dev-dependencies]
tracing-subscriber = "0.3.17"

