[package]
name = "automagic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
toml = "1"
tracing = "0.1"
trait-variant = "0.1"
url = "2.4"

[dev-dependencies]
tracing-subscriber = "0.3"

